Fixed html showing in books title. Fixed list of metadata providers not being alphabetized Fixed filter buttons overlapping pagination elements on homepage Fixed auto-ingest setting options not displaying properly Fixed star ratings being wiped when fetching metadata

--- a/root/app/calibre-web/cps/static/css/caliBlur.css
+++ b/root/app/calibre-web/cps/static/css/caliBlur.css
@@ -8297,11 +8297,12 @@ body h2 {
   --color-secondary-hover: #839ffc
 }
 
-.pagination > li > a
-{
+.pagination > li > a {
     background-color: #202c35;
     color: white;
     border: 1px solid #202c35;
+    border-radius: 4px;
+    margin-left: 5px;
 }
 
 .pagination > li > a:focus,
